--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             app:defaultNavHost="true"
             app:navGraph="@navigation/nav_graph"
             android:layout_marginTop="?android:attr/actionBarSize"
-            tools:context=".MainActivity"/>
+            tools:context="com.project.currency.scanner.imageclassification.MainActivity"/>
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
